--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="refresh" content="0; URL=https://https://t.me/astropulsereal_bot" />
+  <meta http-equiv="refresh" content="0; URL=https://t.me/astropulsereal_bot" />
   <title>Переход...</title>
 </head>
 <body>
