--- a/index.html
+++ b/index.html
@@ -1,10 +1,64 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
-  <meta http-equiv="refresh" content="0; URL=https://t.me/astropulsereal_bot" />
-  <title>Переход...</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>AstroPulse | Перейти в Telegram</title>
+  <style>
+    body {
+      font-family: 'Arial', sans-serif;
+      background: linear-gradient(145deg, #0f1012, #15191d);
+      color: #ffffff;
+      text-align: center;
+      padding: 40px 20px;
+    }
+    .logo {
+      max-width: 120px;
+      border-radius: 50%;
+      margin-bottom: 20px;
+    }
+    h1 {
+      font-size: 24px;
+      margin-bottom: 10px;
+      color: #00bcd4;
+    }
+    p {
+      font-size: 16px;
+      margin-bottom: 25px;
+      line-height: 1.6;
+    }
+    .btn {
+      background-color: #2AABEE;
+      color: white;
+      padding: 16px 28px;
+      font-size: 18px;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      text-decoration: none;
+      display: inline-block;
+      margin-top: 10px;
+      transition: background-color 0.3s ease;
+    }
+    .btn:hover {
+      background-color: #229fd9;
+    }
+    .tip {
+      margin-top: 40px;
+      font-size: 14px;
+      color: #aaaaaa;
+    }
+  </style>
 </head>
 <body>
-  <p>Если не перенаправляет — <a href="https://t.me/astropulsereal_bot">нажмите здесь</a>.</p>
+  <img class="logo" src="https://i.imgur.com/1ehjzQq.png" alt="AstroPulse Bot">
+  <h1>Перейти в AstroPulse Bot</h1>
+  <p>Нажмите кнопку ниже, чтобы открыть AstroPulse в Telegram.</p>
+  <a class="btn" href="https://t.me/astropulsereal_bot" target="_blank">Открыть Telegram</a>
+
+  <div class="tip">
+    <p><strong>Если вы открыли это из TikTok:</strong></p>
+    <p>Нажмите <b>«Поделиться»</b> внизу → <b>«Открыть в браузере»</b><br>или <b>три точки (•••)</b> → <b>Открыть в Safari / Chrome</b></p>
+  </div>
 </body>
 </html>
