--- a/index.html
+++ b/index.html
@@ -3,41 +3,77 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AstroPulse | Бот</title>
+  <title>Переход в AstroPulse Bot</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #0f1012;
+      background: #0f0f0f;
       color: white;
       text-align: center;
       padding: 40px 20px;
     }
-    h1 {
+
+    .alert {
+      color: #ff4040;
       font-size: 24px;
-      color: #00bcd4;
-      margin-bottom: 16px;
-    }
-    p {
-      font-size: 17px;
+      font-weight: bold;
       margin-bottom: 30px;
+      text-transform: uppercase;
     }
-    a.btn {
-      background: #2AABEE;
+
+    .instructions {
+      background: #1a1a1a;
+      border: 2px solid #ffcc00;
+      border-radius: 10px;
+      padding: 20px;
+      margin-bottom: 40px;
+      font-size: 16px;
+      color: #ffffff;
+      line-height: 1.6;
+    }
+
+    .instructions b {
+      color: #ffcc00;
+    }
+
+    .btn {
+      background-color: #2AABEE;
       color: white;
-      padding: 14px 24px;
-      font-size: 18px;
+      padding: 10px 20px;
+      font-size: 16px;
+      border-radius: 6px;
       text-decoration: none;
-      border-radius: 8px;
       display: inline-block;
+      margin-top: 10px;
+    }
+
+    .btn:hover {
+      background-color: #229fd9;
+    }
+
+    .footer {
+      margin-top: 40px;
+      font-size: 12px;
+      color: #888;
     }
   </style>
 </head>
 <body>
 
-  <h1>AstroPulse Бот</h1>
-  <p>Нажмите кнопку ниже, чтобы перейти к нашему Telegram-боту.</p>
+  <div class="alert">TikTok блокирует переход в Telegram!</div>
 
-  <a class="btn" href="step2.html">Открыть бота</a>
+  <div class="instructions">
+    <p><b>Чтобы перейти в бота AstroPulse:</b></p>
+    <p>1. Нажмите <b>три точки (•••)</b> в правом верхнем углу TikTok</p>
+    <p>2. Выберите <b>«Открыть в браузере»</b> (Safari / Chrome)</p>
+    <p>3. После этого нажмите кнопку ниже:</p>
+  </div>
+
+  <a class="btn" href="https://t.me/astropulsereal_bot" target="_blank">Перейти в BOT</a>
+
+  <div class="footer">
+    AstroPulse 2025 — все права защищены
+  </div>
 
 </body>
 </html>
