--- a/index.html
+++ b/index.html
@@ -2,77 +2,105 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Переход в AstroPulse Bot</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>AstroPulse | Переход в бота</title>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #0f0f0f;
+      margin: 0;
+      font-family: 'Orbitron', sans-serif;
+      background: radial-gradient(ellipse at bottom, #1b0036 0%, #0b0015 100%);
       color: white;
       text-align: center;
       padding: 40px 20px;
+      overflow: hidden;
+    }
+
+    .stars {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background: url('https://raw.githubusercontent.com/VincentGarreau/particles.js/master/demo/media/stars.png') repeat;
+      animation: moveStars 100s linear infinite;
+      z-index: -1;
+      opacity: 0.3;
+    }
+
+    @keyframes moveStars {
+      0% { background-position: 0 0; }
+      100% { background-position: -10000px 5000px; }
+    }
+
+    h1 {
+      font-size: 28px;
+      color: #bda0ff;
+      margin-bottom: 20px;
+      animation: fadeIn 1s ease-in-out;
     }
 
     .alert {
-      color: #ff4040;
-      font-size: 24px;
-      font-weight: bold;
-      margin-bottom: 30px;
-      text-transform: uppercase;
-    }
-
-    .instructions {
-      background: #1a1a1a;
-      border: 2px solid #ffcc00;
-      border-radius: 10px;
+      background: #32064f;
+      border: 2px solid #9146ff;
       padding: 20px;
-      margin-bottom: 40px;
+      border-radius: 12px;
+      margin-bottom: 30px;
       font-size: 16px;
       color: #ffffff;
-      line-height: 1.6;
+      animation: fadeIn 1.3s ease-in-out;
     }
 
-    .instructions b {
-      color: #ffcc00;
+    .alert b {
+      color: #ffd500;
     }
 
-    .btn {
-      background-color: #2AABEE;
+    .button {
+      background: #9146ff;
       color: white;
-      padding: 10px 20px;
-      font-size: 16px;
-      border-radius: 6px;
+      padding: 14px 32px;
+      font-size: 18px;
+      border: none;
+      border-radius: 10px;
       text-decoration: none;
+      transition: all 0.3s ease;
       display: inline-block;
-      margin-top: 10px;
+      animation: fadeIn 2s ease-in-out;
     }
 
-    .btn:hover {
-      background-color: #229fd9;
+    .button:hover {
+      background: #c580ff;
+      transform: scale(1.05);
     }
 
     .footer {
       margin-top: 40px;
       font-size: 12px;
-      color: #888;
+      color: #777;
+      animation: fadeIn 2.5s ease-in-out;
+    }
+
+    @keyframes fadeIn {
+      0% { opacity: 0; transform: translateY(10px); }
+      100% { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
 <body>
 
-  <div class="alert">TikTok блокирует переход в Telegram!</div>
+  <div class="stars"></div>
 
-  <div class="instructions">
-    <p><b>Чтобы перейти в бота AstroPulse:</b></p>
-    <p>1. Нажмите <b>три точки (•••)</b> в правом верхнем углу TikTok</p>
+  <h1>Переход в AstroPulse Бот</h1>
+
+  <div class="alert">
+    <p><b>Внимание:</b> Telegram-ссылки не работают внутри TikTok!</p>
+    <p>1. Нажмите <b>три точки (•••)</b> в правом верхнем углу</p>
     <p>2. Выберите <b>«Открыть в браузере»</b> (Safari / Chrome)</p>
     <p>3. После этого нажмите кнопку ниже:</p>
   </div>
 
-  <a class="btn" href="https://t.me/astropulsereal_bot" target="_blank">Перейти в BOT</a>
+  <a class="button" href="https://t.me/astropulsereal_bot" target="_blank">Перейти в бота</a>
 
   <div class="footer">
-    AstroPulse 2025 — все права защищены
+    © AstroPulse 2025 | Гармония звёзд — в каждом клике
   </div>
 
 </body>
