--- a/index.html
+++ b/index.html
@@ -2,106 +2,158 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AstroPulse | Переход в бота</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
   <style>
     body {
       margin: 0;
       font-family: 'Orbitron', sans-serif;
-      background: radial-gradient(ellipse at bottom, #1b0036 0%, #0b0015 100%);
-      color: white;
+      background-color: #0e001c;
+      color: #fff;
       text-align: center;
-      padding: 40px 20px;
-      overflow: hidden;
+      overflow-x: hidden;
     }
 
-    .stars {
+    #particles-js {
       position: absolute;
       width: 100%;
       height: 100%;
-      background: url('https://raw.githubusercontent.com/VincentGarreau/particles.js/master/demo/media/stars.png') repeat;
-      animation: moveStars 100s linear infinite;
+      background: radial-gradient(circle at top, #1c003a 0%, #0b0015 100%);
       z-index: -1;
-      opacity: 0.3;
     }
 
-    @keyframes moveStars {
-      0% { background-position: 0 0; }
-      100% { background-position: -10000px 5000px; }
+    .container {
+      position: relative;
+      padding: 60px 20px;
+      z-index: 2;
+      animation: fadeIn 1s ease-in-out forwards;
     }
 
     h1 {
-      font-size: 28px;
-      color: #bda0ff;
+      font-size: 32px;
       margin-bottom: 20px;
-      animation: fadeIn 1s ease-in-out;
+      color: #c49cff;
+      animation: rise 1.2s ease-out;
     }
 
     .alert {
-      background: #32064f;
+      background: rgba(30, 0, 60, 0.8);
       border: 2px solid #9146ff;
-      padding: 20px;
-      border-radius: 12px;
-      margin-bottom: 30px;
+      border-radius: 14px;
+      padding: 24px;
+      margin: 30px auto;
+      max-width: 480px;
       font-size: 16px;
-      color: #ffffff;
-      animation: fadeIn 1.3s ease-in-out;
+      color: #fff7d6;
+      animation: fadeInUp 1.4s ease-out;
     }
 
     .alert b {
-      color: #ffd500;
+      color: #ffd700;
     }
 
-    .button {
-      background: #9146ff;
+    .btn {
+      background: #a570ff;
       color: white;
       padding: 14px 32px;
       font-size: 18px;
-      border: none;
       border-radius: 10px;
+      border: none;
       text-decoration: none;
-      transition: all 0.3s ease;
+      cursor: pointer;
+      transition: 0.3s ease;
       display: inline-block;
-      animation: fadeIn 2s ease-in-out;
+      margin-top: 30px;
+      animation: zoomIn 1.6s ease-out;
     }
 
-    .button:hover {
-      background: #c580ff;
+    .btn:hover {
+      background: #d4a5ff;
       transform: scale(1.05);
     }
 
     .footer {
-      margin-top: 40px;
-      font-size: 12px;
+      margin-top: 60px;
+      font-size: 13px;
       color: #777;
-      animation: fadeIn 2.5s ease-in-out;
+      animation: fadeIn 2s ease-in;
     }
 
     @keyframes fadeIn {
-      0% { opacity: 0; transform: translateY(10px); }
+      0% { opacity: 0; }
+      100% { opacity: 1; }
+    }
+
+    @keyframes fadeInUp {
+      0% { opacity: 0; transform: translateY(20px); }
       100% { opacity: 1; transform: translateY(0); }
+    }
+
+    @keyframes zoomIn {
+      0% { transform: scale(0.8); opacity: 0; }
+      100% { transform: scale(1); opacity: 1; }
+    }
+
+    @keyframes rise {
+      0% { transform: translateY(30px); opacity: 0; }
+      100% { transform: translateY(0); opacity: 1; }
     }
   </style>
 </head>
 <body>
 
-  <div class="stars"></div>
+  <div id="particles-js"></div>
 
-  <h1>Переход в AstroPulse Бот</h1>
+  <div class="container">
+    <h1>AstroPulse | Перейти в БОТА</h1>
 
-  <div class="alert">
-    <p><b>Внимание:</b> Telegram-ссылки не работают внутри TikTok!</p>
-    <p>1. Нажмите <b>три точки (•••)</b> в правом верхнем углу</p>
-    <p>2. Выберите <b>«Открыть в браузере»</b> (Safari / Chrome)</p>
-    <p>3. После этого нажмите кнопку ниже:</p>
+    <div class="alert">
+      <p><b>Внимание:</b> Telegram-ссылки не открываются напрямую в TikTok.</p>
+      <p><b>1.</b> Нажмите <b>три точки (•••)</b> в правом верхнем углу</p>
+      <p><b>2.</b> Выберите <b>«Открыть в браузере»</b></p>
+      <p><b>3.</b> После этого нажмите кнопку ниже:</p>
+    </div>
+
+    <a class="btn" href="https://t.me/astropulsereal_bot" target="_blank">Перейти в бота</a>
+
+    <div class="footer">
+      © 2025 AstroPulse — Сделано со звёздами
+    </div>
   </div>
 
-  <a class="button" href="https://t.me/astropulsereal_bot" target="_blank">Перейти в бота</a>
-
-  <div class="footer">
-    © AstroPulse 2025 | Гармония звёзд — в каждом клике
-  </div>
+  <script>
+    particlesJS("particles-js", {
+      "particles": {
+        "number": { "value": 100 },
+        "color": { "value": "#ffffff" },
+        "shape": { "type": "circle" },
+        "opacity": {
+          "value": 0.5,
+          "random": true
+        },
+        "size": {
+          "value": 2.5,
+          "random": true
+        },
+        "move": {
+          "enable": true,
+          "speed": 0.6,
+          "direction": "bottom",
+          "straight": false
+        }
+      },
+      "interactivity": {
+        "detect_on": "canvas",
+        "events": {
+          "onhover": { "enable": false },
+          "onclick": { "enable": false }
+        }
+      },
+      "retina_detect": true
+    });
+  </script>
 
 </body>
 </html>
